Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.400     2013-11-05T14:18:19Z

    [Output Changes]
    - Change perldoc urls to point to metacpan.

    [Bug Fixes]
    - Recognize numbered pod items that do not have a period.
      Thanks to Yasutaka ATARASHI for the pull request (gh-4).
    - Remove extraneous blank line between verbatim paragraphs.
      Thanks to Graham Ollis for the pull request (gh-5).
    - Do not escape markdown characters inside links (or file paths).
      Thanks to Taiki Kawakami for the pull request (gh-6).

1.322     2012-11-17T15:51:36Z

    - Fix incorrect escaping of characters
      that are inside inline code blocks in headers.
      Thanks to Peter Vereshagin for the pull req (gh-3).

1.321     2012-10-27T01:23:56Z

    - Improved list handling including support for ordered (numbered)
      and nested lists.
      Thanks to Yasutaka ATARASHI for the pull req (gh-2).

1.320     2012-04-30T23:30:11Z

    - End markdown output with a newline to be more consistent with...
      everything.  If this causes a problem for you please report it.

    - Enable pod2markdown to accept file paths as arguments
      (for both input and output (defaulting to STDIN/STDOUT)).
      Thanks to Mike Doherty for the suggestion [rt-76726].

1.301     2012-04-25T03:56:11Z

    - Fix double-interpolation of list headings
      which caused escaping of the markdown characters.
      Thanks to motemen for the pull request (gh-1).

    - Add TODO tests for improving list handling.

1.300000  2012-04-08T00:08:25Z

    - Document that characters in varbatim paragraphs and code sections
      are not escaped.
    - Bump release number to demonstrate major formatting difference
      of last change (backslash-escaped characters).
      (Forgot to do it last time.)

1.200001  2012-04-07T23:16:23Z

    - Escape characters that are special to Markdown
      (but normal in Pod) with backslashes.